--- a/Function-Plotter/app/build.gradle
+++ b/Function-Plotter/app/build.gradle
@@ -13,5 +13,5 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'org.example.app.App'
+    mainClass = 'de.functionPlotter.App.App'
 }
