--- a/Function-Plotter/app/build.gradle
+++ b/Function-Plotter/app/build.gradle
@@ -4,14 +4,23 @@
 
 plugins {
     id 'buildlogic.java-application-conventions'
+    id 'org.openjfx.javafxplugin' version '0.0.14'
 }
 
 dependencies {
     implementation 'org.apache.commons:commons-text'
     implementation project(':utilities')
+    implementation 'org.openjfx:javafx-controls:23.0.1'
+    implementation 'org.openjfx:javafx-fxml:23.0.1'
+    implementation 'org.openjfx:javafx-web:23.0.1'
+    implementation 'org.openjfx:javafx-media:23.0.1'
 }
 
 application {
-    // Define the main class for the application.
     mainClass = 'de.functionPlotter.App.App'
+}
+
+javafx {
+    version = "23.0.1"
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.media' ]
 }
